aws/projects/16-aws-self-managed-k8s-cluster-autoscaler/k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  ingressClassName: nginx-alb
  rules:
  - host: k8-workers-alb-744373248.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80 

      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins 
            port:
              number: 8080
